"main" css class moved down to avoid overlapping with navbar

--- a/style/style.css
+++ b/style/style.css
@@ -6,5 +6,5 @@ body {
 
 .main {
     position: absolute;
-    top: 60px;
+    top: 55px;
 }
